# precise_trajectory

./: stack.xml
graph_trajectory/: CMakeLists.txt  package.xml  setup.py
graph_trajectory/src/: fancy_graph.py  graph.py
graph_trajectory/src/graph_trajectory/: __init__.py
joint_limit_tools/: CMakeLists.txt  manifest.xml  package.xml  setup.py
joint_limit_tools/src/: even.py
joint_limit_tools/src/joint_limit_tools/: __init__.py
modify_trajectory/: CMakeLists.txt  manifest.xml  package.xml  setup.py
modify_trajectory/src/: pca.py  subset.py
modify_trajectory/src/modify_trajectory/: __init__.py
pr2_joint_recorder/: CMakeLists.txt  package.xml
pr2_joint_recorder/launch/: interactive_controllers.launch
pr2_joint_recorder/src/: interactive_recorder.py  recorder.py
pr2_kinect_teleop/: CMakeLists.txt  package.xml  teleop_mirror.launch  teleop_mirror_filter.launch
pr2_kinect_teleop/src/: teleop.py
pr2_pose_morph/: CMakeLists.txt  create.launch  manifest.xml  package.xml  test.yaml
pr2_pose_morph/src/: executor.py
pr2_score_creator/: CMakeLists.txt  manifest.xml  package.xml  setup.py
pr2_score_creator/launch/: interactive_controllers.launch  interactive_controllers_lite.launch
pr2_score_creator/src/: half_teleop.py  interactive_recorder.py  offline.py  playback.py  proceed.py  score_check.py
pr2_score_creator/src/pr2_score_creator/: __init__.py  interface.py  mode_switcher.py  score.py
pr2_trajectory/: CMakeLists.txt  package.xml  rviz.launch
pr2_trajectory/src/: play_joints_gui.py
pr2_trajectory/src/pr2_trajectory/: __init__.py
pr2_trajectory/tests/: shoulder_pan_linear.traj
precise_sound/: CMakeLists.txt  manifest.xml  package.xml  setup.py
precise_sound/action/: PlaySound.action  PlaySounds.action
precise_sound/src/: call.py  server.py  stop.py
precise_sound/src/precise_sound/: __init__.py
precise_trajectory/graph_trajectory/: manifest.xml
precise_trajectory/graph_trajectory/src/: fancy_graph.py  graph.py
precise_trajectory/graph_trajectory/src/graph_trajectory/: __init__.py
precise_trajectory/joint_limit_tools/: mainpage.dox  manifest.xml
precise_trajectory/joint_limit_tools/src/: convert.py  even.py  output_relative_speeds.py
precise_trajectory/joint_limit_tools/src/joint_limit_tools/: __init__.py
precise_trajectory/modify_trajectory/: manifest.xml
precise_trajectory/modify_trajectory/src/: filter.py  linear.py  modify.py  pca.py  smooth.py
precise_trajectory/modify_trajectory/src/modify_trajectory/: __init__.py
precise_trajectory/pr2_joint_recorder/: interactive_controllers.launch  interactive_nav.launch  mainpage.dox  manifest.xml  pr2_in_rviz_with_gui_joints.launch
precise_trajectory/pr2_joint_recorder/src/: interactive_recorder.py  recorder.py
precise_trajectory/pr2_kinect_teleop/: mainpage.dox  manifest.xml  teleop.launch
precise_trajectory/pr2_kinect_teleop/src/: teleop.py
precise_trajectory/pr2_pose_morph/: create.vcg  uncut0.yaml  uncut1.yaml  uncut_start.yaml
precise_trajectory/pr2_pose_morph/src/: creator.py  nav_action.py
precise_trajectory/pr2_precise_trajectory/: manifest.xml
precise_trajectory/pr2_precise_trajectory/action/: GripperSequence.action
precise_trajectory/pr2_precise_trajectory/src/: convert.py  perform_trajectory.py  play_as_joints.py
precise_trajectory/pr2_precise_trajectory/src/pr2_precise_trajectory/: __init__.py  arm_controller.py  base_controller.py  converter.py  full_arm_controller.py  full_controller.py  gripper_controller.py  head_controller.py  impact_controller.py  impact_watcher.py  joint_watcher.py
precise_trajectory/pr2_sith/: manifest.xml
precise_trajectory/pr2_sith/scripts/: circle.yaml  doublehigh5.yaml  full_swing1.yaml  swing1.yaml  swing2.yaml
precise_trajectory/pr2_sith/src/: arm.py  circle.py  duel.py  test_swings.py  trajectory.py
precise_trajectory/pr2_sith/src/pr2_sith/: lightsaber.py
precise_trajectory/pr2_trajectory/: base.traj  filter.launch  filter3.launch  mainpage.dox  manifest.xml  quick.traj
precise_trajectory/pr2_trajectory/src/: action.py  create.py  createTests.py  direct.py  even.py  filter.py  follow.py  followTest.py  graph.py  kalman.py  ma.py  play_joints.py  record.py  recordAction.py  smooth.py  subset.py
precise_trajectory/pr2_trajectory/src/pr2_trajectory/: __init__.py
precise_trajectory/pr2_trajectory/tests/: r_elbow_flex_joint.traj  r_forearm_roll_joint.traj  r_shoulder_lift_joint.traj  r_shoulder_pan_joint.traj  r_upper_arm_roll_joint.traj  r_wrist_flex_joint.traj  r_wrist_roll_joint.traj
precise_trajectory/trajectory_converter/: manifest.xml
precise_trajectory/trajectory_converter/src/: converter.py
precise_trajectory/trajectory_converter/src/trajectory_converter/: __init__.py
precise_trajectory/trajectory_tools/: mainpage.dox  manifest.xml
precise_trajectory/trajectory_tools/src/trajectory_tools/: __init__.py
