<package>
  <name>graph_trajectory</name>
  <version>0.5.0</version>
  <description>graph_trajectory</description>
  <maintainer email="">David!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/graph_trajectory</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David!!</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>pr2_precise_trajectory</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>pr2_precise_trajectory</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>pr2_precise_trajectory</test_depend> -->

</package>