<package>
  <name>joint_limit_tools</name>
  <version>0.5.0</version>
  <description>joint_limit_tools</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joint_limit_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>urdf_python</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>pr2_precise_trajectory</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>urdf_python</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>pr2_precise_trajectory</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>urdf_python</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>pr2_precise_trajectory</test_depend> -->

</package>
