<package>
  <name>pr2_joint_recorder</name>
  <version>0.5.0</version>
  <description>pr2_joint_recorder</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_joint_recorder</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>joy_listener</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pr2_precise_trajectory</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>graph_trajectory</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>joy_listener</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_precise_trajectory</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>graph_trajectory</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>joy_listener</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pr2_precise_trajectory</test_depend> -->
  <!-- <test_depend>pr2_mechanism_msgs</test_depend> -->
  <!-- <test_depend>graph_trajectory</test_depend> -->

</package>
